--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "http-server": "^0.10.0",
     "jest": "^20.0.4",
     "jest-styled-components": "^4.2.2",
+    "linaria": "^1.3.1",
     "lodash-es": "^4.17.4",
     "normalize.css": "^7.0.0",
     "prettier": "^1.5.3",
@@ -67,8 +68,8 @@
     "rollup-plugin-replace": "^1.1.1",
     "rollup-plugin-uglify": "^2.0.1",
     "rollup-watch": "^4.3.1",
-    "shelljs": "^0.7.8",
     "semantic-release": "^15.9.8",
+    "shelljs": "^0.7.8",
     "styled-components": "^2.1.1",
     "uglify-es": "^3.0.26"
   }
